<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:padding="8dp">

    <android.support.v7.widget.CardView  android:id="@+id/movie_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/default_card_view_corner_radius"
        app:cardElevation="@dimen/default_card_view_elevation">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_image_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_image_view_height"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/movie_title_text"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image_poster" />

            <TextView
                android:id="@+id/movie_release_date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/release_date_lbl"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/release_date_text"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_release_date_lbl"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movie_vote_avg_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/vote_avg_lbl"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/movie_release_date_lbl"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date_lbl"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/movie_vote_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="12dp"
                android:drawableEnd="@drawable/ic_star_votes"
                android:paddingEnd="4dp"
                android:paddingStart="0dp"
                android:text="@string/default_vote_avg_value"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_vote_avg_lbl"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>